[package]
name = "avl-rs"
version = "0.1.0"
authors = ["Danny Gale <danny.gale@gale-labs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[dev-dependencies]
test-env-log = "0.2.2"
env_logger = "0.7"
pretty_env_logger = "0.3"
